fixing rates call

--- a/docs/examples/distribution_demo.ipynb
+++ b/docs/examples/distribution_demo.ipynb
@@ -439,8 +439,9 @@
       },
       "outputs": [],
       "source": [
-        "coarse_coag_loss = rates.Rates(**coarse_mode).coagulation_loss()\n",
-        "coarse_coag_gain = rates.Rates(**coarse_mode).coagulation_gain()"
+        "coarse_particle = particle.Particle(**coarse_mode)\n",
+        "coarse_coag_loss = rates.Rates(particle=coarse_particle).coagulation_loss()\n",
+        "coarse_coag_gain = rates.Rates(particle=coarse_particle).coagulation_gain()"
       ]
     },
     {
