add inspect print source to utils

--- a/docs/documentation/utilities/dilution_loss.ipynb
+++ b/docs/documentation/utilities/dilution_loss.ipynb
@@ -16,6 +16,16 @@
     "from particula.util import dilution_loss\n",
     "help(dilution_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "print(inspect.getsource(dilution_loss))"
+   ]
   }
  ],
  "metadata": {
