--- a/docs/documentation/utilities/mean_free_path.ipynb
+++ b/docs/documentation/utilities/mean_free_path.ipynb
@@ -42,6 +42,16 @@
     "from particula.util import mean_free_path\n",
     "help(mean_free_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "print(inspect.getsource(mean_free_pathn))"
+   ]
   }
  ],
  "metadata": {
