--- a/docs/documentation/utilities/dimensionless_coagulation.ipynb
+++ b/docs/documentation/utilities/dimensionless_coagulation.ipynb
@@ -14,7 +14,17 @@
    "outputs": [],
    "source": [
     "from particula.util import dimensionless_coagulation\n",
-    "help(dimensionless_coagulation)\n"
+    "help(dimensionless_coagulation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "print(inspect.getsource(dimensionless_coagulation))"
    ]
   }
  ],
