--- a/docs/documentation/utilities/particle_mass.ipynb
+++ b/docs/documentation/utilities/particle_mass.ipynb
@@ -16,6 +16,16 @@
     "from particula.util import particle_mass\n",
     "help(particle_mass)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "print(inspect.getsource(particle_mass))"
+   ]
   }
  ],
  "metadata": {
