--- a/docs/examples/distribution_demo.ipynb
+++ b/docs/examples/distribution_demo.ipynb
@@ -24,7 +24,7 @@
         "# from particula import u\n",
         "from particula import particle, rates\n",
         "import numpy as np\n",
-        "import matplotlib"
+        "from matplotlib import pyplot as plt"
       ]
     },
     {
@@ -174,7 +174,7 @@
         }
       ],
       "source": [
-        "fig, ax= matplotlib.pyplot.subplots(1,2,figsize=[14,6])\n",
+        "fig, ax= plt.subplots(1,2,figsize=[14,6])\n",
         "\n",
         "#linear scale\n",
         "ax[0].plot(default_distribution.pre_radius().m, default_distribution.pre_distribution().m)\n",
@@ -389,7 +389,7 @@
         }
       ],
       "source": [
-        "fig, ax= matplotlib.pyplot.subplots(1,2,figsize=[14,6])\n",
+        "fig, ax= plt.subplots(1,2,figsize=[14,6])\n",
         "\n",
         "ax[0].plot(fine_mode_dist.pre_radius().m, fine_mode_dist.pre_distribution().m)\n",
         "ax[0].plot(coarse_mode_dist.pre_radius().m, coarse_mode_dist.pre_distribution().m)\n",
@@ -406,7 +406,7 @@
         "ax[1].grid(True, alpha=0.5)\n",
         "\n",
         "\n",
-        "fig, ax= matplotlib.pyplot.subplots(1,2,figsize=[14,6])\n",
+        "fig, ax= plt.subplots(1,2,figsize=[14,6])\n",
         "\n",
         "ax[0].plot(multi_mode.pre_radius().m, multi_mode.pre_distribution().m)\n",
         "\n",
@@ -439,8 +439,9 @@
       },
       "outputs": [],
       "source": [
-        "coarse_coag_loss = rates.Rates(**coarse_mode).coagulation_loss()\n",
-        "coarse_coag_gain = rates.Rates(**coarse_mode).coagulation_gain()"
+        "coarse_particle = particle.Particle(**coarse_mode)\n",
+        "coarse_coag_loss = rates.Rates(particle=coarse_particle).coagulation_loss()\n",
+        "coarse_coag_gain = rates.Rates(particle=coarse_particle).coagulation_gain()"
       ]
     },
     {
@@ -478,7 +479,7 @@
         }
       ],
       "source": [
-        "fig, ax= matplotlib.pyplot.subplots(1,1,figsize=[9,6])\n",
+        "fig, ax= plt.subplots(1,1,figsize=[9,6])\n",
         "\n",
         "# (2*(peak of original distribution)**3)**(1/3)\n",
         "\n",
@@ -604,7 +605,7 @@
         }
       ],
       "source": [
-        "fig, ax= matplotlib.pyplot.subplots(1,1,figsize=[9,6])\n",
+        "fig, ax= plt.subplots(1,1,figsize=[9,6])\n",
         "\n",
         "radius = p_radius.m\n",
         "ax.semilogx(radius, p_distribution_0.m, '-b', label='Inital')\n",
@@ -700,7 +701,7 @@
         "solution = SimpleSolver(**problem).solution()\n",
         "\n",
         "#plot\n",
-        "fig, ax= matplotlib.pyplot.subplots(1,1,figsize=[9,6])\n",
+        "fig, ax= plt.subplots(1,1,figsize=[9,6])\n",
         "\n",
         "radius = p_radius.m\n",
         "ax.semilogx(radius, particle_dist2.pre_distribution().m, '-b', label='Inital')\n",
@@ -828,7 +829,7 @@
       ],
       "source": [
         "#plot\n",
-        "fig, ax= matplotlib.pyplot.subplots(1,1,figsize=[10,10])\n",
+        "fig, ax= plt.subplots(1,1,figsize=[10,10])\n",
         "\n",
         "radius = ambient_dist.pre_radius().to('nm').m\n",
         "ax.loglog(radius, ambient_dist.pre_distribution().m, '-k', label='Inital')\n",
@@ -915,7 +916,7 @@
         "  fine_mode_vol[i] = pdf_volume_total(radius_withunits[0:split_index], solution[i, 0:split_index] )\n",
         "  coarse_mode_vol[i] = pdf_volume_total(radius_withunits[split_index:-1], solution[i, split_index:-1] )\n",
         "\n",
-        "fig, ax= matplotlib.pyplot.subplots(1,1,figsize=[10,10])\n",
+        "fig, ax= plt.subplots(1,1,figsize=[10,10])\n",
         "\n",
         "ax.semilogy(time_array, fine_mode, '-b', label='fine sphere')\n",
         "ax.semilogy(time_array, coarse_mode, '--b', label='coarse sphere')\n",
