--- a/_sources/documentation/utilities/dilution_loss.ipynb
+++ b/_sources/documentation/utilities/dilution_loss.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `dimensionless_coagulation`\n"
+    "# `dilution_loss`"
    ]
   },
   {
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from particula.util import dimensionless_coagulation\n",
-    "help(dimensionless_coagulation)"
+    "from particula.util import dilution_loss\n",
+    "help(dilution_loss)"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import inspect\n",
-    "print(inspect.getsource(dimensionless_coagulation))"
+    "print(inspect.getsource(dilution_loss))"
    ]
   }
  ],
