--- a/docs/examples/coagulation_demo.ipynb
+++ b/docs/examples/coagulation_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparing different coagulation calculations.\n",
+    "# Ion–particle coagulation\n",
     "\n",
     "The problem here: positive particles (1 to 9 charges) of radius 3 nm colliding with a negative ion of radius 0.45 nm.\n",
     "\n",
