change radius() to particle_radius

--- a/docs/examples/distribution_statistics.ipynb
+++ b/docs/examples/distribution_statistics.ipynb
@@ -78,7 +78,7 @@
       "source": [
         "default_distribution = particle.Particle()\n",
         "\n",
-        "print(\"Radii: \", default_distribution.radius()[:10])"
+        "print(\"Radii: \", default_distribution.particle_radius[:10])"
       ]
     },
     {
@@ -87,7 +87,7 @@
         "id": "mTjKICHhzbsG"
       },
       "source": [
-        "At every radius listed in `.radius()` is a probability of the particles at that radius. Thus, we have probability distribution function (PDF) of particles."
+        "At every radius listed in `.particle_radius` is a probability of the particles at that radius. Thus, we have probability distribution function (PDF) of particles."
       ]
     },
     {
@@ -173,17 +173,17 @@
         "fig, ax = plt.subplots(1, 2, figsize=[14, 6])\n",
         "\n",
         "#linear scale\n",
-        "ax[0].plot(default_distribution.radius().m, default_distribution.distribution().m)\n",
+        "ax[0].plot(default_distribution.particle_radius.m, default_distribution.distribution().m)\n",
         "\n",
         "ax[0].set_ylabel(f\"Number, {default_distribution.distribution().u}\")\n",
-        "ax[0].set_xlabel(f\"Radius, {default_distribution.radius().u}\")\n",
+        "ax[0].set_xlabel(f\"Radius, {default_distribution.particle_radius.u}\")\n",
         "ax[0].grid(True, alpha=0.5)\n",
         "\n",
         "#log x\n",
-        "ax[1].semilogx(default_distribution.radius().m, default_distribution.distribution().m)\n",
+        "ax[1].semilogx(default_distribution.particle_radius.m, default_distribution.distribution().m)\n",
         "\n",
         "ax[1].set_ylabel(f\"Number, {default_distribution.distribution().u}\")\n",
-        "ax[1].set_xlabel(f\"Radius, {default_distribution.radius().u}\")\n",
+        "ax[1].set_xlabel(f\"Radius, {default_distribution.particle_radius.u}\")\n",
         "ax[1].grid(True, alpha=0.5)\n"
       ]
     },
@@ -224,9 +224,9 @@
         "def pdf_volume_total(radius, pdf_distribution):\n",
         "    return np.trapz(y=pdf_distribution* 4/3 * np.pi * radius**3, x=radius)\n",
         "\n",
-        "print(f'Total number of the PDF, {pdf_total(default_distribution.radius(), default_distribution.distribution())}')\n",
+        "print(f'Total number of the PDF, {pdf_total(default_distribution.particle_radius, default_distribution.distribution())}')\n",
         "\n",
-        "print(f'Total volume of the PDF, {pdf_volume_total(default_distribution.radius(), default_distribution.distribution())}')"
+        "print(f'Total volume of the PDF, {pdf_volume_total(default_distribution.particle_radius, default_distribution.distribution())}')"
       ]
     },
     {
@@ -331,11 +331,11 @@
         }
       ],
       "source": [
-        "print(f'Total number of the PDF, {pdf_total(fine_mode_dist.radius(), fine_mode_dist.distribution())}')\n",
+        "print(f'Total number of the PDF, {pdf_total(fine_mode_dist.particle_radius, fine_mode_dist.distribution())}')\n",
         "\n",
-        "print(f'Total volume of the PDF, {pdf_volume_total(fine_mode_dist.radius(), fine_mode_dist.distribution())}')\n",
-        "print(f'Total volume of the PDF, {pdf_volume_total(coarse_mode_dist.radius(), coarse_mode_dist.distribution())}')\n",
-        "print(f'Total volume of the PDF, {pdf_volume_total(multi_mode.radius(), multi_mode.istribution())}')"
+        "print(f'Total volume of the PDF, {pdf_volume_total(fine_mode_dist.particle_radius, fine_mode_dist.distribution())}')\n",
+        "print(f'Total volume of the PDF, {pdf_volume_total(coarse_mode_dist.particle_radius, coarse_mode_dist.distribution())}')\n",
+        "print(f'Total volume of the PDF, {pdf_volume_total(multi_mode.particle_radius, multi_mode.istribution())}')"
       ]
     },
     {
@@ -387,33 +387,33 @@
       "source": [
         "fig, ax = plt.subplots(1, 2, figsize=[14, 6])\n",
         "\n",
-        "ax[0].plot(fine_mode_dist.radius().m, fine_mode_dist.distribution().m)\n",
-        "ax[0].plot(coarse_mode_dist.radius().m, coarse_mode_dist.distribution().m)\n",
+        "ax[0].plot(fine_mode_dist.particle_radius.m, fine_mode_dist.distribution().m)\n",
+        "ax[0].plot(coarse_mode_dist.particle_radius.m, coarse_mode_dist.distribution().m)\n",
         "\n",
         "ax[0].set_ylabel(f\"Number, {fine_mode_dist.distribution().u}\")\n",
-        "ax[0].set_xlabel(f\"Radius, {fine_mode_dist.radius().u}\")\n",
+        "ax[0].set_xlabel(f\"Radius, {fine_mode_dist.particle_radius.u}\")\n",
         "ax[0].grid(True, alpha=0.5)\n",
         "\n",
-        "ax[1].loglog(fine_mode_dist.radius().m, fine_mode_dist.distribution().m)\n",
-        "ax[1].loglog(coarse_mode_dist.radius().m, coarse_mode_dist.distribution().m)\n",
+        "ax[1].loglog(fine_mode_dist.particle_radius.m, fine_mode_dist.distribution().m)\n",
+        "ax[1].loglog(coarse_mode_dist.particle_radius.m, coarse_mode_dist.distribution().m)\n",
         "\n",
         "ax[1].set_ylabel(f\"Number, {coarse_mode_dist.distribution().u}\")\n",
-        "ax[1].set_xlabel(f\"Radius, {coarse_mode_dist.radius().u}\")\n",
+        "ax[1].set_xlabel(f\"Radius, {coarse_mode_dist.particle_radius.u}\")\n",
         "ax[1].grid(True, alpha=0.5)\n",
         "\n",
         "\n",
         "fig, ax= plt.subplots(1, 2, figsize=[14, 6])\n",
         "\n",
-        "ax[0].plot(multi_mode.radius().m, multi_mode.distribution().m)\n",
+        "ax[0].plot(multi_mode.particle_radius.m, multi_mode.distribution().m)\n",
         "\n",
         "ax[0].set_ylabel(f\"Number, {multi_mode.distribution().u}\")\n",
-        "ax[0].set_xlabel(f\"Radius, {multi_mode.radius().u}\")\n",
+        "ax[0].set_xlabel(f\"Radius, {multi_mode.particle_radius.u}\")\n",
         "ax[0].grid(True, alpha=0.5)\n",
         "\n",
-        "ax[1].loglog(multi_mode.radius().m, multi_mode.distribution().m)\n",
+        "ax[1].loglog(multi_mode.particle_radius.m, multi_mode.distribution().m)\n",
         "\n",
         "ax[1].set_ylabel(f\"Number, {multi_mode.distribution().u}\")\n",
-        "ax[1].set_xlabel(f\"Radius, {multi_mode.radius().u}\")\n",
+        "ax[1].set_xlabel(f\"Radius, {multi_mode.particle_radius.u}\")\n",
         "ax[1].grid(True, alpha=0.5)"
       ]
     }
