--- a/docs/examples/distribution_statistics.ipynb
+++ b/docs/examples/distribution_statistics.ipynb
@@ -335,7 +335,7 @@
         "\n",
         "print(f'Total volume of the PDF, {pdf_volume_total(fine_mode_dist.particle_radius, fine_mode_dist.particle_distribution())}')\n",
         "print(f'Total volume of the PDF, {pdf_volume_total(coarse_mode_dist.particle_radius, coarse_mode_dist.particle_distribution())}')\n",
-        "print(f'Total volume of the PDF, {pdf_volume_total(multi_mode.particle_radius, multi_mode.istribution())}')"
+        "print(f'Total volume of the PDF, {pdf_volume_total(multi_mode.particle_radius, multi_mode.particle_distribution())}')"
       ]
     },
     {
