--- a/docs/examples/distribution_statistics.ipynb
+++ b/docs/examples/distribution_statistics.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Distribution statistics\n",
         "\n",
-        "We are going to look at two classes in particula, for this notebook. The first is `Particle` and the second (`Rates`) we'll use to move forward in time. \n",
+        "We are going to look at `Particle` class for this notebook to generate particle distributions.\n",
         "\n",
         "So let's get those imported along with numpy and `matplotlib` for plotting."
       ]
