--- a/docs/examples/distribution_statistics.ipynb
+++ b/docs/examples/distribution_statistics.ipynb
@@ -78,7 +78,8 @@
       "source": [
         "default_distribution = particle.Particle()\n",
         "\n",
-        "print(\"Radii: \", default_distribution.particle_radius[:10])"
+        "print(\"Radii: \")\n",
+        "print(default_distribution.particle_radius[:10])"
       ]
     },
     {
@@ -129,7 +130,8 @@
         }
       ],
       "source": [
-        "print(\"Particles PDF given radii: \", default_distribution.particle_distribution()[:10])"
+        "print(\"Particles PDF given radii: \")\n",
+        "print(default_distribution.particle_distribution()[:10])"
       ]
     },
     {
@@ -193,7 +195,7 @@
         "id": "-CG24Rt83ZAk"
       },
       "source": [
-        "## Summary statistics of a particle PDF.\n",
+        "## Summary statistics of a particle PDF\n",
         "As the keen-eyed reader may have noticed, this is not a typical PDF and the maximunm is very large ($1.75*10^{18}$). Lets define some diagnostic functions and see what we get for the integral area."
       ]
     },
