--- a/docs/examples/distribution_coagulation.ipynb
+++ b/docs/examples/distribution_coagulation.ipynb
@@ -6,7 +6,7 @@
         "id": "O0AjocVUY-Y8"
       },
       "source": [
-        "## Coagulation Kernel\n",
+        "## Distribution coagulation\n",
         "Now with particle number distribution we can calculated the coagulation rate, both the loss and gain in particle number. Let's import the classes from the previous tutorial and make a new coarse distribution."
       ]
     },
