--- a/docs/tour/part-tour.ipynb
+++ b/docs/tour/part-tour.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Particula Tour\n",
+    "# Particula tour\n",
     "\n",
     "We have designed `particula` around object-oriented programming principles where physics entities inherit from each other.\n",
     "\n",
