add coarse_mode kwargs

--- a/docs/examples/distribution_coagulation.ipynb
+++ b/docs/examples/distribution_coagulation.ipynb
@@ -23,6 +23,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "coarse_mode = {\n",
+        "    \"mode\": 2000e-9, # 200 nm median\n",
+        "    \"nbins\": 1000, # 1000 bins\n",
+        "    \"nparticles\": 1e5, # 1e4 #\n",
+        "    \"volume\": 1e-6, # per 1e-6 m^3 (or 1 cc)\n",
+        "    \"gsigma\": 1.4, # relatively narrow\n",
+        "    \"spacing\": \"linspace\", # bin spacing, \n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 12,
       "metadata": {
         "id": "wC2j2zDnVSUB"
