--- a/docs/examples/distribution_coagulation.ipynb
+++ b/docs/examples/distribution_coagulation.ipynb
@@ -45,7 +45,7 @@
       },
       "outputs": [],
       "source": [
-        "coarse_particle = particle.Particle(**coarse_mode)\n",
+        "coarse_mode_dist = particle.Particle(**coarse_mode)\n",
         "coarse_coag_loss = rates.Rates(particle=coarse_particle).coagulation_loss()\n",
         "coarse_coag_gain = rates.Rates(particle=coarse_particle).coagulation_gain()"
       ]
