--- a/docs/examples/distribution_evolution.ipynb
+++ b/docs/examples/distribution_evolution.ipynb
@@ -56,7 +56,7 @@
         "particle_dist2 = particle.Particle(**simple_dic_kwargs) # pass the kwargs using ** prefix\n",
         "\n",
         "#inital distribution\n",
-        "p_distribution_0 = particle_dist2.distribution()\n",
+        "p_distribution_0 = particle_dist2.particle_distribution()\n",
         "p_radius = particle_dist2.particle_radius\n",
         "coag_kernel = full_coag(radius=p_radius)\n",
         "\n",
@@ -123,7 +123,7 @@
         "ax.semilogx(radius, distribution_time[-1,:], '-r', label='t=end')\n",
         "\n",
         "ax.legend()\n",
-        "ax.set_ylabel(f\"Number, {particle_dist2.distribution().u}\")\n",
+        "ax.set_ylabel(f\"Number, {particle_dist2.particle_distribution().u}\")\n",
         "ax.set_xlabel(f\"Radius, {particle_dist2.particle_radius.u}\")\n",
         "ax.grid(True, alpha=0.5)"
       ]
@@ -201,7 +201,7 @@
         "\n",
         "#setup the inital state of the distribution\n",
         "problem = {\n",
-        "    \"distribution\": particle_dist2.distribution(),\n",
+        "    \"distribution\": particle_dist2.particle_distribution(),\n",
         "    \"radius\": particle_dist2.particle_radius,\n",
         "    \"kernel\": coag_kernel,\n",
         "    \"tspan\": time_array\n",
@@ -214,12 +214,12 @@
         "fig, ax = plt.subplots(1, 1, figsize=[9, 6])\n",
         "\n",
         "radius = p_radius.m\n",
-        "ax.semilogx(radius, particle_dist2.distribution().m, '-b', label='Inital')\n",
+        "ax.semilogx(radius, particle_dist2.particle_distribution().m, '-b', label='Inital')\n",
         "ax.semilogx(radius, solution.m[49,:], '--', label='t=50')\n",
         "ax.semilogx(radius, solution.m[-1,:], '-r', label='t=end')\n",
         "\n",
         "ax.legend()\n",
-        "ax.set_ylabel(f\"Number, {particle_dist2.distribution().u}\")\n",
+        "ax.set_ylabel(f\"Number, {particle_dist2.particle_distribution().u}\")\n",
         "ax.set_xlabel(f\"Radius, {particle_dist2.particle_radius.u}\")\n",
         "ax.grid(True, alpha=0.5)\n"
       ]
