--- a/docs/examples/distribution_ambient.ipynb
+++ b/docs/examples/distribution_ambient.ipynb
@@ -25,6 +25,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from particula import particle, rates\n",
+        "import numpy as np\n",
+        "from matplotlib import pyplot as plt\n",
+        "from particula.util.simple_solver import SimpleSolver"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 19,
       "metadata": {
         "id": "SBGKSrvkf6pS"
@@ -40,7 +52,7 @@
         "    \"spacing\": \"logspace\", # bin spacing,\n",
         "}\n",
         "\n",
-        "ambient_dist = particle.ParticleDistribution(**ambient_dist) \n",
+        "ambient_dist = particle.Particle(**ambient_dist) \n",
         "\n",
         "#inital distribution coag kernel\n",
         "coag_kernel = full_coag(radius=ambient_dist.particle_radius)\n",
