more missing imports

--- a/docs/examples/distribution_ambient.ipynb
+++ b/docs/examples/distribution_ambient.ipynb
@@ -32,7 +32,10 @@
         "from particula import particle, rates\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
-        "from particula.util.simple_solver import SimpleSolver"
+        "from particula.util.simple_solver import SimpleSolver\n",
+        "from particula.util.coagulation_rate import CoagulationRate\n",
+        "from particula.util.dimensionless_coagulation import full_coag\n",
+        "from particula.util.input_handling import in_time"
       ]
     },
     {
