--- a/docs/examples/distribution_ambient.ipynb
+++ b/docs/examples/distribution_ambient.ipynb
@@ -198,6 +198,12 @@
         "fine_mode_vol = np.zeros_like(time_array)\n",
         "coarse_mode_vol = np.zeros_like(time_array)\n",
         "\n",
+        "def pdf_total(radius, pdf_distribution):\n",
+        "    return np.trapz(y=pdf_distribution, x=radius)\n",
+        "\n",
+        "def pdf_volume_total(radius, pdf_distribution):\n",
+        "    return np.trapz(y=pdf_distribution* 4/3 * np.pi * radius**3, x=radius)\n",
+        "\n",
         "for i, value in enumerate(time_array):\n",
         "  fine_mode[i] = pdf_total(radius[0:split_index], solution.m[i, 0:split_index] )\n",
         "  coarse_mode[i] = pdf_total(radius[split_index:-1], solution.m[i, split_index:-1] )\n",
