--- a/docs/tour/part-tour.ipynb
+++ b/docs/tour/part-tour.ipynb
@@ -14,18 +14,32 @@
     "4. Up to `Particle`, there is no sense of a time dimension. To add one, we create the `Rates` object who takes as input the `Particle` object, thus explicitly allowing dynamics-specific calculations, or \"rates\".\n",
     "5. Finally, a dynamic `Solver` object builds on `Rates` and propagates the `Particle` object in time."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
