--- a/_sources/documentation/intro.ipynb
+++ b/_sources/documentation/intro.ipynb
@@ -4,27 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `particle_mass`\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from particula.util import particle_mass\n",
-    "help(particle_mass)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import inspect\n",
-    "print(inspect.getsource(particle_mass))"
+    "# API reference"
    ]
   }
  ],
