--- a/docs/examples/distribution_statistics.ipynb
+++ b/docs/examples/distribution_statistics.ipynb
@@ -21,6 +21,14 @@
       },
       "outputs": [],
       "source": [
+        "try:\n",
+        "    import particula, matplotlib\n",
+        "except ImportError:\n",
+        "    print(\"Setting up computational environment...\")\n",
+        "    %pip install -U particula -qqq\n",
+        "    %pip install matplotlib -qqq\n",
+        "\n",
+        "\n",
         "from particula import particle, rates\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt"
