--- a/docs/examples/ionparticle_coagulation.ipynb
+++ b/docs/examples/ionparticle_coagulation.ipynb
@@ -23,6 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    import particula, matplotlib\n",
+    "except ImportError:\n",
+    "    print(\"Setting up computational environment...\")\n",
+    "    %pip install -U particula -qqq\n",
+    "    %pip install matplotlib -qqq\n",
+    "\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from particula import particle, u\n",
