--- a/docs/examples/distribution_ambient.ipynb
+++ b/docs/examples/distribution_ambient.ipynb
@@ -29,6 +29,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "try:\n",
+        "    import particula, matplotlib\n",
+        "except ImportError:\n",
+        "    print(\"Setting up computational environment...\")\n",
+        "    %pip install -U particula -qqq\n",
+        "    %pip install matplotlib -qqq\n",
+        "\n",
         "from particula import particle, rates\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
@@ -265,7 +272,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
