--- a/docs/documentation/environment.ipynb
+++ b/docs/documentation/environment.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "from particula import u\n",
+    "from particula.units import u\n",
     "from particula.environment import Environment\n",
     "\n",
     "EnvOne = Environment(temperature=300) \n",
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "from particula import u\n",
+    "from particula.units import u\n",
     "from particula.environment import Environment\n",
     "\n",
     "EnvTwo = Environment(temperature=300*u.K) \n",
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "from particula import u\n",
+    "from particula.units import u\n",
     "from particula.environment import Environment\n",
     "\n",
     "EnvThree = Environment()\n",
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from particula import u\n",
+    "from particula.units import u\n",
     "from particula.environment import Environment\n",
     "\n",
     "# EnvWrong = Environment(temperature=300*u.m) # will raise an error"
