--- a/docs/documentation/utilities/dynamic_viscosity.ipynb
+++ b/docs/documentation/utilities/dynamic_viscosity.ipynb
@@ -76,7 +76,7 @@
       "        \n",
       "        Examples:\n",
       "        ```\n",
-      "        >>> from particula import u\n",
+      "        >>> from particula.units import u\n",
       "        >>> from particula.util.dynamic_viscosity import dyn_vis\n",
       "        >>> # with units\n",
       "        >>> dyn_vis(\n",
@@ -157,7 +157,7 @@
       "        https://resources.wolframcloud.com/FormulaRepository/resources/Sutherlands-Formula\n",
       "\n",
       "\"\"\"\n",
-      "from particula import u\n",
+      "from particula.units import u\n",
       "from particula.constants import (REF_TEMPERATURE_STP, REF_VISCOSITY_AIR_STP,\n",
       "                                 SUTHERLAND_CONSTANT)\n",
       "from particula.util.input_handling import in_temperature, in_viscosity\n",
@@ -176,7 +176,7 @@
       "\n",
       "        Examples:\n",
       "        ```\n",
-      "        >>> from particula import u\n",
+      "        >>> from particula.units import u\n",
       "        >>> from particula.util.dynamic_viscosity import dyn_vis\n",
       "        >>> # with units\n",
       "        >>> dyn_vis(\n",
