--- a/docs/documentation/vapor.ipynb
+++ b/docs/documentation/vapor.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "from particula import u\n",
+    "from particula.units import u\n",
     "from particula.vapor import Vapor\n",
     "\n",
     "VapOne = Vapor(temperature=300) \n",
