testing that cpc load still works

--- a/docs/examples/loading_data_part1.ipynb
+++ b/docs/examples/loading_data_part1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +308,7 @@
       "filename_regex: *.csv\n",
       "MIN_SIZE_BYTES: 10\n",
       "data_loading_function: general_1d_load\n",
+      "header_row: 0\n",
       "data_checks: {'characters': [10, 100], 'char_counts': {',': 4}, 'skip_rows': 0, 'skip_end': 0}\n",
       "data_column: [1, 2]\n",
       "data_header: ['data 1', 'data 2']\n",
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,6 +390,7 @@
     "    'filename_regex': '*.csv',\n",
     "    'MIN_SIZE_BYTES': 10,\n",
     "    'data_loading_function':'general_1d_load',\n",
+    "    'header_row': 0,\n",
     "    'data_checks': {'characters': [\n",
     "            10,\n",
     "            100],\n",
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
