updated the exmples

--- a/docs/examples/loading_data_part1.ipynb
+++ b/docs/examples/loading_data_part1.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # Loading Data from a File\n",
+    " # Loading Data from a File Part 1\n",
     "\n",
-    " This example shows how to load data from a file into a Stream object. These\n",
-    " are usufull for doing some automated analysis, but you can just pull\n",
-    " data from a file and do whatever you want with it."
+    " This example shows how to load data from a file and automate the cleaning, \n",
+    " formatting, and processing of the data.\n",
+    "\n",
+    " If you have a lot of data and repetitive tasks, you can use the scripts at\n",
+    " the end of this example to clean up you import process."
    ]
   },
   {
@@ -467,7 +469,7 @@
     "        linestyle=\"none\",\n",
     "        marker=\".\",)\n",
     "plt.tick_params(rotation=-35)\n",
-    "ax.set_xlabel(\"Time (epoch)\")\n",
+    "ax.set_xlabel(\"Time (UTC)\")\n",
     "ax.set_ylabel(\"Data\")\n",
     "ax.legend()\n",
     "plt.show()\n",
