--- a/docs/examples/loading_data_part1.ipynb
+++ b/docs/examples/loading_data_part1.ipynb
@@ -475,6 +475,18 @@
     "plt.show()\n",
     "fig.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "We covered how to load data from a file and automate the cleaning, formatting,\n",
+    "and processing of the data. We then showed how to generate a settings\n",
+    "dictionary and use that to load the data into a `Stream` object. This is\n",
+    "useful if you have a lot of data and repetitive tasks. Doing this method also loads and combines multiple files into one `Stream` object.\n"
+   ]
   }
  ],
  "metadata": {
