--- a/docs/examples/loading_data_part4.ipynb
+++ b/docs/examples/loading_data_part4.ipynb
@@ -26,7 +26,8 @@
     " ├── SMPS_data\n",
     " │   ├── 2022-07-07_095151_SMPS.csv\n",
     " │   ├── 2022-07-10_094659_SMPS.csv\n",
-    " │   ├── stream_settings_smps.json\n",
+    " │   ├── stream_settings_smps_1d.json\n",
+    " │   ├── stream_settings_smps_2d.json\n",
     " ├── lake_settings.json\n",
     " ```\n"
    ]
@@ -62,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Generate the settings and save them\n",
+    " ### Generate the settings and save them\n",
     "\n",
     " We'll use `generate_settings.save_settings_for_stream` to"
    ]
@@ -103,8 +104,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Next save the SMPS settings\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +161,75 @@
     "    delimiter=\",\",\n",
     "    time_shift_seconds=0,\n",
     "    timezone_identifier=\"UTC\",\n",
+    ")\n",
+    "\n",
+    "# save the settings to a file\n",
+    "settings_generator.save_settings_for_stream(\n",
+    "    settings=smps_1d_settings,\n",
+    "    path=path,\n",
+    "    subfolder='SMPS_data',\n",
+    "    settings_suffix='_smps_1d',\n",
+    ")\n",
+    "settings_generator.save_settings_for_stream(\n",
+    "    settings=smps_2d_settings,\n",
+    "    path=path,\n",
+    "    subfolder='SMPS_data',\n",
+    "    settings_suffix='_smps_2d',\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the Stream settings\n",
+    "\n",
+    "If you are still exploring you anlaysis pipeline, you may what individual streams. To load the settings for a stream use `generate_settings.load_settings_for_stream`.  This function takes the path to the settings file as an argument.  It returns a dictionary with the settings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      "['Lower_Size_(nm)', 'Upper_Size_(nm)', 'Sample_Temp_(C)', 'Sample_Pressure_(kPa)', 'Relative_Humidity_(%)', 'Median_(nm)', 'Mean_(nm)', 'Geo_Mean_(nm)', 'Mode_(nm)', 'Geo_Std_Dev.', 'Total_Conc_(#/cc)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "smps_1d_stream_settings = settings_generator.load_settings_for_stream(\n",
+    "    path=path,\n",
+    "    subfolder='SMPS_data',\n",
+    "    settings_suffix='_smps_1d',\n",
+    ")\n",
+    "\n",
+    "stream_smps_1d = loader_interface.load_files_interface(\n",
+    "    path=path,\n",
+    "    settings=smps_1d_stream_settings\n",
+    ")\n",
+    "\n",
+    "print(stream_smps_1d.header)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lake settings\n",
+    "\n",
+    "If you wanted to load everything for a reanalysis, instead of calling each individual stream, you can first save a lake settings file.  This is done with `generate_settings.save_settings_for_lake`.  This function takes the path to the lake settings file as an argument.  It returns a dictionary with the settings."
    ]
   },
   {
@@ -169,6 +245,21 @@
     "    'smps_2d': smps_2d_settings,\n",
     "}\n",
     "\n",
+    "# save the lake settings to a file\n",
+    "settings_generator.save_settings_for_lake(\n",
+    "    settings=combined_settings,\n",
+    "    path=path,\n",
+    "    subfolder='lake_settings',\n",
+    "    settings_suffix='_lake',\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# now call the loader interface for files\n",
     "lake = loader_interface.load_folders_interface(\n",
     "    path=path,\n",
