updated plot time label Fixes #403

--- a/docs/examples/chamber_smps_data.ipynb
+++ b/docs/examples/chamber_smps_data.ipynb
@@ -424,7 +424,7 @@
     "    stream_smps_2d.data,\n",
     "    cmap=plt.cm.PuBu_r, levels=50)\n",
     "plt.yscale('log')\n",
-    "ax.set_xlabel('Epoch Time')\n",
+    "ax.set_xlabel('Experiment time (hours)')\n",
     "ax.set_ylabel('Diameter (nm)')\n",
     "plt.colorbar(label='Concentration dN [#/cm3]', ax=ax)\n",
     "plt.show()\n"
