--- a/pr-preview/pr-407/_sources/examples/loading_data_part1.ipynb
+++ b/pr-preview/pr-407/_sources/examples/loading_data_part1.ipynb
@@ -374,8 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from: CPC_3010_data_20220709_Jul.csv\n",
-      "Loading data from: CPC_3010_data_20220710_Jul.csv\n"
+      "  Loading file: CPC_3010_data_20220709_Jul.csv\n",
+      "  Loading file: CPC_3010_data_20220710_Jul.csv\n"
      ]
     }
    ],
@@ -429,18 +429,28 @@
      "output_type": "stream",
      "text": [
       "Stream:\n",
-      "Stream(header=['data 1', 'data 2'], data=array([[3.3510e+04, 3.3465e+04, 3.2171e+04, ..., 1.9403e+04, 2.0230e+04,\n",
-      "        1.9521e+04],\n",
-      "       [1.7000e+01, 1.7100e+01, 1.7000e+01, ..., 1.6900e+01, 1.7000e+01,\n",
-      "        1.6800e+01]]), time=array([1.65734280e+09, 1.65734281e+09, 1.65734281e+09, ...,\n",
-      "       1.65751559e+09, 1.65751560e+09, 1.65751560e+09]), files=[['CPC_3010_data_20220709_Jul.csv', 1044534], ['CPC_3010_data_20220710_Jul.csv', 1113488]])\n"
+      "Stream(header=['data 1', 'data 2'], data=array([[3.3510e+04, 1.7000e+01],\n",
+      "       [3.3465e+04, 1.7100e+01],\n",
+      "       [3.2171e+04, 1.7000e+01],\n",
+      "       ...,\n",
+      "       [1.9403e+04, 1.6900e+01],\n",
+      "       [2.0230e+04, 1.7000e+01],\n",
+      "       [1.9521e+04, 1.6800e+01]]), time=array([1.65734280e+09, 1.65734281e+09, 1.65734281e+09, ...,\n",
+      "       1.65751559e+09, 1.65751560e+09, 1.65751560e+09]), files=[['CPC_3010_data_20220709_Jul.csv', 1044534], ['CPC_3010_data_20220710_Jul.csv', 1113488]])\n",
+      "Stream length:\n",
+      "(68551, 2)\n",
+      "(68551,)\n"
      ]
     }
    ],
    "source": [
     "# print data stream summary\n",
     "print('Stream:')\n",
-    "print(data_stream)"
+    "print(data_stream)\n",
+    "print('Stream length:')\n",
+    "len(data_stream)\n",
+    "print(data_stream.data.shape)\n",
+    "print(data_stream.time.shape)"
    ]
   },
   {
@@ -463,7 +473,7 @@
     "# plot the data\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(data_stream.datetime64,\n",
-    "        data_stream.data[0, :],  # data_stream.data is a 2d array, so we need\n",
+    "        data_stream.data[:, 0],  # data_stream.data is a 2d array, so we need\n",
     "                                 # to specify which column we want to plot\n",
     "        label=\"data column 1\",\n",
     "        linestyle=\"none\",\n",
