update lint and part2 text

--- a/docs/examples/streamlake/loading_data_part1.ipynb
+++ b/docs/examples/streamlake/loading_data_part1.ipynb
@@ -373,7 +373,8 @@
     "    data_column=[1, 2],  # Columns in the file that contain the data\n",
     "    data_header=['data 1', 'data 2'],  # Headers for the data columns\n",
     "    time_column=[0],  # Column in the file that contains the time data\n",
-    "    time_format='epoch',  # Format of the time data (epoch, ISO 8601, etc.)\n",
+    "    # Format of the time data (epoch, \"%m/%d/%Y %H:%M:%S\" etc.)\n",
+    "    time_format='epoch',\n",
     "    delimiter=',',  # Delimiter used in the data file (e.g., comma for CSV)\n",
     "    time_shift_seconds=0,  # Shift in time data if needed, in seconds\n",
     "    timezone_identifier='UTC',  # Timezone identifier for the time data\n",
