--- a/docs/examples/streamlake/loading_data_part4.ipynb
+++ b/docs/examples/streamlake/loading_data_part4.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  # Loading Data Part 4\n",
+    "# Loading Data Part 4\n",
     "\n",
-    "  This example shows how do that save and load those stream and lake settings dictionaries. This is useful if you want to save your settings and then load them later.  This is also useful if you want to share your settings with someone else.  Or just stop from having to retype everything."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  ## Working path\n",
+    "In this part of the tutorial, we will explore how to save and load stream and lake settings dictionaries. This can be incredibly useful for preserving your settings, sharing them with others, or simply avoiding the need to retype everything.\n",
     "\n",
-    "  In the working path you now see a couple of `.json` files, these are the settings files.  The `lake_settings.json` file contains the settings for the lake.  The `stream_settings.json` file contains the settings for the stream.  These are the same settings that you created in the previous example.  The only difference is that they are now saved to a file.\n",
+    "## Working Path\n",
+    "\n",
+    "In your working path, you will find a couple of `.json` files. These files are the settings files. The `lake_settings.json` file stores the settings for the lake, while the `stream_settings.json` file stores the settings for the stream. These settings are the same ones you created in the previous example, but now they are saved to files for easy access and sharing.\n",
+    "\n",
     "\n",
     " ```\n",
     " data\n",
@@ -34,17 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to data folder:\n",
+      "\\data\\tests\\example_data\n"
+     ]
+    }
+   ],
    "source": [
-    "# all the imports\n",
+    "# Import the necessary libraries and modules\n",
     "import matplotlib.pyplot as plt\n",
     "from particula.data import loader_interface, settings_generator\n",
     "from particula.data.tests.example_data.get_example_data import get_data_folder\n",
     "from particula.data.lake import Lake\n",
     "\n",
-    "# set the parent directory of the data folders\n",
+    "# Set the parent directory where the data folders are located\n",
     "path = get_data_folder()\n",
     "print('Path to data folder:')\n",
     "print(path.rsplit('particula')[-1])"
@@ -54,9 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Generate the settings and save them\n",
+    "## Generate and Save Settings\n",
     "\n",
-    " We'll use `generate_settings.save_settings_for_stream` to"
+    "First, we generate the settings for the CPC data using the `settings_generator.for_general_1d_load` function. These settings include details such as the data file location, file format, column names, and more.\n"
    ]
   },
   {
@@ -98,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next save the SMPS settings\n"
+    "### Next save the SMPS settings\n"
    ]
   },
   {
@@ -173,16 +178,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the Stream settings\n",
+    "## Loading Stream Settings\n",
     "\n",
-    "If you are still exploring you anlaysis pipeline, you may what individual streams. To load the settings for a stream use `generate_settings.load_settings_for_stream`.  This function takes the path to the settings file as an argument.  It returns a dictionary with the settings."
+    "If you are still exploring your analysis pipeline, you may want to load settings for individual streams. To do so, you can use the generate_settings.load_settings_for_stream function. This function takes the path to the settings file as an argument and returns a dictionary containing the stream settings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      "['Lower_Size_(nm)', 'Upper_Size_(nm)', 'Sample_Temp_(C)', 'Sample_Pressure_(kPa)', 'Relative_Humidity_(%)', 'Median_(nm)', 'Mean_(nm)', 'Geo_Mean_(nm)', 'Mode_(nm)', 'Geo_Std_Dev.', 'Total_Conc_(#/cc)']\n"
+     ]
+    }
+   ],
    "source": [
     "smps_1d_stream_settings = settings_generator.load_settings_for_stream(\n",
     "    path=path,\n",
@@ -202,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lake settings\n",
+    "## Lake settings\n",
     "\n",
     "If you wanted to load everything for a reanalysis, instead of calling each individual stream, you can first save a lake settings file.  This is done with `generate_settings.save_settings_for_lake`.  This function takes the path to the lake settings file as an argument.  It returns a dictionary with the settings."
    ]
