--- a/docs/examples/streamlake/loading_data_part4.ipynb
+++ b/docs/examples/streamlake/loading_data_part4.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,14 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  Loading file: 2022-07-10_094659_SMPS.csv\n",
       "['Lower_Size_(nm)', 'Upper_Size_(nm)', 'Sample_Temp_(C)', 'Sample_Pressure_(kPa)', 'Relative_Humidity_(%)', 'Median_(nm)', 'Mean_(nm)', 'Geo_Mean_(nm)', 'Mode_(nm)', 'Geo_Std_Dev.', 'Total_Conc_(#/cc)']\n"
      ]
@@ -224,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder Settings: cpc\n",
+      "  Loading file: CPC_3010_data_20220709_Jul.csv\n",
+      "  Loading file: CPC_3010_data_20220710_Jul.csv\n",
+      "Folder Settings: smps_1d\n",
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      "Folder Settings: smps_2d\n",
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      " \n",
+      "Lake with streams: ['cpc', 'smps_1d', 'smps_2d']\n"
+     ]
+    }
+   ],
    "source": [
     "lake_settings = settings_generator.load_settings_for_lake(\n",
     "    path=path,\n",
@@ -285,36 +309,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function save_settings_for_stream in module particula.data.settings_generator:\n",
+      "\n",
+      "save_settings_for_stream(settings: dict, path: str, subfolder: str, settings_suffix: str = '') -> None\n",
+      "    Save settings for lake data to a JSON file.\n",
+      "    \n",
+      "    Given a dictionary of settings, this function saves it to a JSON file\n",
+      "    named 'stream_settings' with an optional suffix in the specified filename.\n",
+      "    The JSON file is formatted with a 4-space indentation.\n",
+      "    \n",
+      "    Args:\n",
+      "    - settings: The settings dictionary to be saved.\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file will be saved.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.save_settings_for_stream)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function load_settings_for_stream in module particula.data.settings_generator:\n",
+      "\n",
+      "load_settings_for_stream(path: str, subfolder: str, settings_suffix: str = '') -> dict\n",
+      "    Load settings for Stream data from a JSON file.\n",
+      "    \n",
+      "    Given a path and subfolder, this function searches for a JSON file\n",
+      "    named 'stream_settings' with an optional suffix. It returns the settings\n",
+      "    as a dictionary. If no file is found, or multiple files are found,\n",
+      "    appropriate errors or warnings are raised.\n",
+      "    \n",
+      "    Args:\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file is expected.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - dict: A dictionary of settings loaded from the file.\n",
+      "    \n",
+      "    Raises:\n",
+      "    - FileNotFoundError: If no settings file is found.\n",
+      "    - Warning: If more than one settings file is found.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.load_settings_for_stream)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function save_settings_for_lake in module particula.data.settings_generator:\n",
+      "\n",
+      "save_settings_for_lake(settings: dict, path: str, subfolder: str = '', settings_suffix: str = '') -> None\n",
+      "    Save settings for lake data to a JSON file.\n",
+      "    \n",
+      "    Given a dictionary of settings, this function saves it to a JSON file\n",
+      "    named 'lake_settings' with an optional suffix in the specified filename.\n",
+      "    The JSON file is formatted with a 4-space indentation.\n",
+      "    \n",
+      "    Args:\n",
+      "    - settings: The settings dictionary to be saved.\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file will be saved.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.save_settings_for_lake)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function load_settings_for_lake in module particula.data.settings_generator:\n",
+      "\n",
+      "load_settings_for_lake(path: str, subfolder: str = '', settings_suffix: str = '') -> dict\n",
+      "    Load settings for Lake data from a JSON file. The settings file is\n",
+      "    a dictionary of stream settings dictionaries.\n",
+      "    \n",
+      "    Given a path and subfolder, this function searches for a JSON file\n",
+      "    named 'lake_settings' with an optional suffix. It returns the settings\n",
+      "    as a dictionary. If no file is found, or multiple files are found,\n",
+      "    appropriate errors or warnings are raised.\n",
+      "    \n",
+      "    Args:\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file is expected.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - dict: A dictionary of settings loaded from the file.\n",
+      "    \n",
+      "    Raises:\n",
+      "    - FileNotFoundError: If no settings file is found.\n",
+      "    - Warning: If more than one settings file is found.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.load_settings_for_lake)"
    ]
